@@ -1,7 +1,7 @@
 "Enable Combat" = false
 "Enable Experience" = false
 "Enable Farming" = true
-"Enable Hunger" = false
+"Enable Hunger" = true
 "Enable Mining" = false
 "Enable Miscellaneous" = true
 "Enable Movement" = false
@@ -231,9 +231,9 @@
 
 [Hunger]
 	#Changes to the speed on how food is eaten or how items are consumed.
-	"Enable Food Consuming" = true
+	"Enable Food Consuming" = false
 	#Makes Health regen work differently, like in Combat Test snapshots. Can be customized. Also adds Well Fed and Injured effects.
-	"Enable Health Regen" = true
+	"Enable Health Regen" = false
 	#Change food's hunger and saturation given, also makes food heal you by a bit. Changing anything requires a Minecraft restart.
 	"Enable Food Hunger" = true
 	#Make the player consume more hunger with different actions
@@ -294,7 +294,7 @@
 	[Hunger."Food Hunger"]
 		#Food's hunger restored will be multiplied by this value (rounded up). E.g. With this set to 0.5 a Cooked Porkchop would heal 4 hunger instead of 8. Setting to 1 will disable this feature.
 		#Range: 0.0 ~ 20.0
-		"Food Hunger Multiplier" = 0.63
+		"Food Hunger Multiplier" = 0.5
 		#Food's saturation restored will be multiplied by this value. Be aware that saturation is a multiplier and not a flat value, it is used to calculate the effective saturation restored when a player eats, and this calculation includes hunger, so by reducing hunger you automatically reduce saturation too. Setting to 1 will disable this feature.
 		#This requires a Minecraft Restart.
 		#Range: 0.0 ~ 64.0
@@ -302,11 +302,34 @@
 		#Define custom food values, one string = one item. Those items are not affected by other changes such as 'Food Hunger Multiplier'.
 		#The format is modid:itemid,hunger,saturation. Saturation is optional
 		#E.g. 'minecraft:cooked_porkchop,16,1.0' will make cooked porkchops give 8 shranks of food and 16 saturation (actual saturation is calculated by 'saturation * 2 * hunger').
-		"Custom Food Hunger" = ["minecraft:rotten_flesh,2"]
+		"Custom Food Hunger" = [
+			"minecraft:rotten_flesh,2",
+		]
 
 		#Items or tags that will ignore the food multipliers. This can be inverted via 'Blacklist as Whitelist'. Each entry has an item or tag. E.g. ["minecraft:stone", "minecraft:cooked_porkchop"].
 		[Hunger."Food Hunger"."Food Blacklist"]
-			Blacklist = []
+			Blacklist = [
+				"minecraft:rabbit_stew",
+
+				"farmersdelight:pasta_with_mutton_chop", "farmersdelight:baked_cod_stew", "farmersdelight:roasted_mutton_chops", "farmersdelight:beef_stew", "farmersdelight:pasta_with_meatballs", "farmersdelight:fried_rice",
+				"farmersdelight:vegetable_soup", "farmersdelight:vegetable_noodles", "farmersdelight:squid_ink_pasta", "farmersdelight:shepherds_pie", "farmersdelight:honey_glazed_ham", "farmersdelight:bacon_and_eggs",
+				"farmersdelight:pumpkin_soup", "farmersdelight:steak_and_potatoes", "farmersdelight:fish_stew", "farmersdelight:roast_chicken", "farmersdelight:stuffed_pumpkin", "farmersdelight:chicken_soup",
+				"farmersdelight:grilled_salmon", "farmersdelight:ratatouille", "farmersdelight:noodle_soup", "farmersdelight:cabbage_rolls", "farmersdelight:egg_sandwich", "farmersdelight:hamburger", "farmersdelight:bacon_sandwich",
+				"farmersdelight:chicken_sandwich", "farmersdelight:mutton_wrap", "farmersdelight:fruit_salad", "farmersdelight:mixed_salad", "farmersdelight:dumplings", "farmersdelight:stuffed_potato", "farmersdelight:barbecue_stick",
+
+				"farmersrespite:blazing_chili", "farmersrespite:black_cod", "farmersrespite:tea_curry",
+
+				"corn_delight:corn_soup", "corn_delight:corn_dog", "corn_delight:classic_corn_dog", "corn_delight:taco", "corn_delight:creamed_corn",
+
+				"fruittrees:lemon_roast_chicken", "fruittrees:rice_with_fruits", "fruittrees:graprefruit_panna_cotta", "fruittrees:donauwelle",
+
+				"nethersdelight:strider_moss_stew", "nethersdelight:grilled_strider", "nethersdelight:plate_of_stuffed_hoglin_snout", "nethersdelight:plate_of_stuffed_hoglin_ham", "nethersdelight:plate_of_stuffed_hoglin_roast",
+				"nethersdelight:nether_skewer", "nethersdelight:warped_moldy_meat", "nethersdelight:nether_salad",
+
+				"ecologics:tropical_stew",
+
+				"kubejs:grilled_corn", "kubejs:boiled_corn", "kubejs:cornbread_stuffing"
+			]
 			#If true the list will be treated as a whitelist instead of blacklist
 			"List as Whitelist" = false
 
