@@ -1,0 +1,5 @@
+onEvent('jei.hide.items', event => {
+    event.hide('corn_delight:grilled_corn');
+    event.hide('corn_delight:boiled_corn');
+    event.hide('corn_delight:cornbread_stuffing');
+});
