@@ -1,8 +1,0 @@
-// priority: 0
-
-console.info('Hello, World! (You will see this line every time client resources reload)')
-
-onEvent('jei.hide.items', event => {
-	// Hide items in JEI here
-	// event.hide('minecraft:cobblestone')
-})
